# l10n

./: .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml
.github/workflows/: ci.yml
core/: Cargo.toml  README.md
core/src/: config.rs  l10n.rs  l10n_message.rs  lib.rs  locales.rs  message.rs  resource.rs  utils.rs
examples/: main.rs
impl/: Cargo.toml  README.md
impl/src/: init.rs  instance.rs  lib.rs  message.rs  translate.rs  valid.rs
impl/src/ast/: args.rs  key.rs  mod.rs
impl/src/derive/: ast.rs  digest.rs  mod.rs
l10n/en/: app.ftl  settings.ftl
l10n/fr/: app.ftl  settings.ftl
src/: lib.rs
tests/: compiletest.rs
tests/ui/: default_l10n.toml
tests/ui/default_l10n/en/: home.ftl
tests/ui/default_l10n/fr/: home.ftl
tests/ui/fail/arguments/: duplicate-shorthand.rs  duplicate-shorthand.stderr  duplicate.rs  duplicate.stderr  missing.rs  missing.stderr
tests/ui/fail/derive/: enum-undefined-message-id.rs  enum-undefined-message-id.stderr  enum-undefined-resource.rs  enum-undefined-resource.stderr
tests/ui/fail/functions/: duplicate.rs  duplicate.stderr  l10n.toml  missing-all.stderr  missing.rs  missing.stderr
tests/ui/fail/functions/l10n/en/: settings.ftl
tests/ui/fail/functions/l10n/fr/: settings.ftl
tests/ui/fail/incomplete/: derive-enum.rs  derive-enum.stderr  derive-struct.rs  derive-struct.stderr  message.rs  message.stderr
tests/ui/fail/init/: duplicate-field.rs  duplicate-field.stderr  invalid-field.rs  invalid-field.stderr
tests/ui/fail/invalid-locale-directory/: invalid-locale-directory.stderr  l10n.toml
tests/ui/fail/message-reference/: l10n.toml  message-reference.rs  message-reference.stderr
tests/ui/fail/message-reference/l10n/en/: resource.ftl
tests/ui/fail/missing-env/: l10n.toml  missing-env.stderr
tests/ui/fail/missing-mandatory-locale/: missing-mandatory-locale.stderr
tests/ui/fail/missing-resource/: missing-resource.rs  missing-resource.stderr
tests/ui/fail/missing-resource/l10n/fr/: settings.ftl
tests/ui/fail/not-exists/: message-attribute.rs  message-attribute.stderr  message-id-value.rs  message-id-value.stderr  message-id.rs  message-id.stderr  resource.rs  resource.stderr
tests/ui/fail/parser-error/: parser-error.stderr
tests/ui/fail/parser-error/l10n/fr/: settings.ftl
tests/ui/fail/transparent/: one-field.rs  one-field.stderr
tests/ui/fail/variables/: duplicate-shorthand.rs  duplicate-shorthand.stderr  duplicate.rs  duplicate.stderr  missing.stderr
tests/ui/pass/: derive-enum.rs  derive-struct.rs  message.rs  no-enum-attribute.rs
tests/ui/pass/arguments/: enum.rs  message.rs  short.rs
tests/ui/pass/feature-allow-incomplete/: derive-enum.rs  derive-struct.rs  message.rs
tests/ui/pass/generics/: derive-enum.rs  derive-struct.rs
tests/ui/pass/init/: l10n.toml  params.rs
tests/ui/pass/init/l10n/: _terms.ftl
tests/ui/pass/init/l10n/en/: home.ftl
tests/ui/pass/init/l10n/fr/: home.ftl
tests/ui/pass/path-environment-test/: l10n.toml  profile.rs
tests/ui/pass/path-environment-test/l10n_dev/en/: app.ftl
tests/ui/pass/path-environment-test/l10n_test/en/: app.ftl
