[package]
name = "l10n"
version = "0.1.0"
description = "Opinionated localization library built upon fluent-bundle."
authors = ["Mathieu Tricoire <mathieu@tricoi.re>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MathieuTricoire/l10n"
repository = "https://github.com/MathieuTricoire/l10n"
documentation = "https://docs.rs/l10n"
readme = "README.md"
categories = ["localization", "internationalization"]
keywords = ["l10n", "localization", "i18n", "internationalization", "macros"]
edition = "2021"
# Keep in sync with Cargo.toml files, clippy.toml and .github/workflows/ci.yml
rust-version = "1.61"

[workspace]
members = ["core", "impl"]
exclude = ["fluent-rs"]

[dependencies]
l10n_core = { version = "0.1", path = "core" }
l10n_impl = { version = "0.1", path = "impl" }
once_cell = "1.13"

[dev-dependencies]
fluent-pseudo = "0.3"
indoc = "1.0"
rustversion = "1.0"
tempfile = "3.3"
trybuild = { version = "1.0", features = ["diff"] }

[features]
allow-incomplete = ["l10n_impl/allow-incomplete"]
