[workspace]
members = ["core", "impl"]


[workspace.package]
version = "0.1.3"
authors = ["Mathieu Tricoire <mathieu@tricoi.re>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MathieuTricoire/l10n"
repository = "https://github.com/MathieuTricoire/l10n"
documentation = "https://docs.rs/l10n"
categories = ["localization", "internationalization"]
keywords = ["l10n", "localization", "i18n", "internationalization", "macros"]
edition = "2021"
# Keep in sync with Cargo.toml files, clippy.toml and .github/workflows/ci.yml
rust-version = "1.61"


[workspace.dependencies]
l10n_core = { version = "=0.1.3", path = "core" }
l10n_impl = { version = "=0.1.3", path = "impl" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"


[package]
name = "l10n"
version = { workspace = true }
description = "Opinionated localization library built upon fluent-bundle."
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }


[dependencies]
l10n_core = { workspace = true }
l10n_impl = { workspace = true }
once_cell = "1.13"


[dev-dependencies]
fluent-pseudo = "0.3"
indoc = "2.0"
rustversion = "1.0"
tempfile = "3.3"
trybuild = { version = "1.0", features = ["diff"] }


[features]
allow-incomplete = ["l10n_impl/allow-incomplete"]
