[package]
name = "l10n_core"
version = "0.0.0"
description = "Core crate for l10n."
authors = ["Mathieu Tricoire <mathieu@tricoi.re>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["localization", "internationalization"]
keywords = ["l10n", "localization", "i18n", "internationalization", "macros"]
edition = "2021"
rust-version = "1.56"
