[package]
name = "l10n_core"
version = "0.1.0"
description = "Core crate for l10n."
authors = ["Mathieu Tricoire <mathieu@tricoi.re>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MathieuTricoire/l10n"
repository = "https://github.com/MathieuTricoire/l10n"
documentation = "https://docs.rs/l10n"
readme = "README.md"
categories = ["localization", "internationalization"]
keywords = ["l10n", "localization", "i18n", "internationalization", "macros"]
edition = "2021"
# Keep in sync with Cargo.toml files, clippy.toml and .github/workflows/ci.yml
rust-version = "1.56"

[dependencies]
# TODO Change fluent-rs crates source from crates.io if these PRs are merged:
# - https://github.com/projectfluent/fluent-rs/pull/264
# - https://github.com/projectfluent/fluent-rs/pull/271
fluent-bundle = { path = "../fluent-rs/fluent-bundle" }
fluent-syntax = { path = "../fluent-rs/fluent-syntax" }
intl-memoizer = { path = "../fluent-rs/intl-memoizer" }

unic-langid = { version = "0.9", features = ["macros", "serde"] }
thiserror = "1.0"
self_cell = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
indoc = "1.0"
tempfile = "3.3"
macro_files = "0.1"
