[package]
name = "l10n_core"
version = { workspace = true }
description = "Core crate for l10n."
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1.0"
fluent-bundle = "0.15.3"
fluent-syntax = "0.11.1"
intl-memoizer = "0.5.2"
self_cell = "1.0"
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
unic-langid = { version = "0.9", features = ["macros", "serde"] }

[dev-dependencies]
indoc = "2.0"
tempfile = "3.3"
macro_files = "0.1"
