[package]
name = "l10n_impl"
version = "0.0.0"
description = "Proc macros for l10n."
authors = ["Mathieu Tricoire <mathieu@tricoi.re>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/l10n"
categories = ["localization", "internationalization"]
keywords = ["l10n", "localization", "i18n", "internationalization", "macros"]
edition = "2021"
rust-version = "1.56"

[lib]
proc-macro = true
