[package]
name = "l10n_impl"
version = "0.1.0"
description = "Proc macros for l10n."
authors = ["Mathieu Tricoire <mathieu@tricoi.re>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/MathieuTricoire/l10n"
repository = "https://github.com/MathieuTricoire/l10n"
documentation = "https://docs.rs/l10n"
readme = "README.md"
categories = ["localization", "internationalization"]
keywords = ["l10n", "localization", "i18n", "internationalization", "macros"]
edition = "2021"
# Keep in sync with Cargo.toml files, clippy.toml and .github/workflows/ci.yml
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
l10n_core = { version = "=0.1.0", path = "../core" }
once_cell = "1.13"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full", "extra-traits"] }
thiserror = "1.0"
toml = "0.5"

[features]
allow-incomplete = []
