[package]
name = "l10n_impl"
version = { workspace = true }
description = "Proc macros for l10n."
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
l10n_core = { workspace = true }
once_cell = "1.13"
proc-macro2 = "1.0"
quote = "1.0"
serde = { workspace = true }
syn = { version = "2.0", features = ["full", "extra-traits"] }
thiserror = { workspace = true }
toml = { workspace = true }

[features]
allow-incomplete = []
